--- a/client/webapp/src/main/webapp/app/admin/index.html
+++ b/client/webapp/src/main/webapp/app/admin/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>camunda Admin</title>
 
     <meta charset="utf-8" />
@@ -14,20 +15,20 @@
     <!-- Styles -->
     <link href="$APP_ROOT/assets/css/admin/loader.css?bust=CACHE_BUSTER" rel="stylesheet" />
 
-    <!-- For IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-
     <!-- Favicon -->
     <link href="$APP_ROOT/assets/img/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
     <!-- scripts -->
-    <!-- For IE9 support of placeholder tag -->
-    <!--[if (lt IE 9)| (IE 9) ]>
-    <script src="$APP_ROOT/assets/vendor/better-dom/better-dom.js" data-htc="$APP_ROOT/assets/vendor/better-dom/better-dom.htc"></script>
-    <script src="$APP_ROOT/assets/vendor/better-placeholder-polyfill/better-placeholder-polyfill.js"></script>
+
+    <!-- For IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <!--[if IE]>
+        <link href="$APP_ROOT/assets/vendor/better-dom/dist/better-dom-legacy.htc" rel="htc"/>
+        <script src="$APP_ROOT/assets/vendor/better-dom/dist/better-dom-legacy.js"></script>
+    <![endif]-->
+
     <script src="$APP_ROOT/assets/vendor/requirejs/require.js"></script>
 
     <script src="$APP_ROOT/app/admin/admin-bootstrap.js?bust=CACHE_BUSTER"></script>
@@ -47,7 +48,7 @@
             <span class="icon-bar"></span>
           </a>
 
-          <div ng-include="'templates/navigation.html'"></div>
+          <div ng-include="'$APP_ROOT/app/admin/templates/navigation.html'"></div>
         </div>
       </div>
     </div>
@@ -72,5 +73,7 @@
         </div>
       </footer>
     </div>
+    <script src="$APP_ROOT/assets/vendor/better-dom/dist/better-dom.js"></script>
+    <script src="$APP_ROOT/assets/vendor/better-placeholder-polyfill/dist/better-placeholder-polyfill.js"></script>
   </body>
 </html>
