--- a/client/webapp/src/main/webapp/app/tasklist/index.html
+++ b/client/webapp/src/main/webapp/app/tasklist/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>camunda Tasklist</title>
 
     <meta charset="utf-8" />
@@ -24,13 +25,19 @@
     <link href="$APP_ROOT/assets/img/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
     <!-- scripts -->
+
+    <!-- For IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <!--[if IE]>
+        <link href="$APP_ROOT/assets/vendor/better-dom/dist/better-dom-legacy.htc" rel="htc"/>
+        <script src="$APP_ROOT/assets/vendor/better-dom/dist/better-dom-legacy.js"></script>
+    <![endif]-->
+
     <script src="$APP_ROOT/assets/vendor/requirejs/require.js"></script>
 
     <script src="$APP_ROOT/app/tasklist/tasklist-bootstrap.js?bust=CACHE_BUSTER"></script>
-
-    <!--[if IE 9]>
-      <script src="$APP_ROOT/assets/vendor/jquery-placeholder/jquery-placeholder.js"></script>
-    <![endif]-->
   </head>
 
   <body>
@@ -49,7 +56,7 @@
             <span class="icon-bar"></span>
           </a>
 
-          <div ng-include="'templates/navigation.html'"></div>
+          <div ng-include="'$APP_ROOT/app/tasklist/templates/navigation.html'"></div>
         </div>
       </div>
     </div>
@@ -88,5 +95,7 @@
         </div>
       </footer>
     </div>
+    <script src="$APP_ROOT/assets/vendor/better-dom/dist/better-dom.js"></script>
+    <script src="$APP_ROOT/assets/vendor/better-placeholder-polyfill/dist/better-placeholder-polyfill.js"></script>
   </body>
 </html>
