--- a/client/webapp/src/main/webapp/app/common/directives/engineSelect.html
+++ b/client/webapp/src/main/webapp/app/common/directives/engineSelect.html
@@ -1,11 +1,12 @@
 <li class="dropdown"
-    help
-    help-text="If you have multiple engines running you can select the process engine here. The data displayed in this application is based on the selected engine only."
-    help-placement="'bottom'"
+    tooltip="If you have multiple engines running you can select the process engine here. The data displayed in this application is based on the selected engine only."
+    tooltip-placement="bottom"
     ng-show="engines.length > 1 && currentEngine">
 <!-- # CE - src/main/webapp/app/common/directives/engineSelect.html -->
 
-  <a href class="dropdown-toggle" data-toggle="dropdown">
+  <a href
+     class="dropdown-toggle"
+     data-toggle="dropdown">
     {{ currentEngine.name }}
   </a>
 
