--- a/client/webapp/src/main/webapp/app/tasklist/directives/process-definition-select.html
+++ b/client/webapp/src/main/webapp/app/tasklist/directives/process-definition-select.html
@@ -1,12 +1,13 @@
 <!-- # CE - src/main/webapp/app/tasklist/directives/process-definition-select.html -->
 <li class="dropdown"
-    help
-    help-text="Start a process instance"
-    help-placement="'bottom'"
+    tooltip="Start a process instance"
+    tooltip-placement="bottom"
     ng-show="processDefinitions.length"
     if-logged-in>
 
-  <a href class="dropdown-toggle" data-toggle="dropdown">
+  <a href
+     class="dropdown-toggle"
+     data-toggle="dropdown">
     <i class="icon-th-list icon-white"></i>
   </a>
 
