--- a/client/directives/activity-instance-tree.html
+++ b/client/directives/activity-instance-tree.html
@@ -17,9 +17,8 @@
       </button>
 
       <a ng-click="select($event)"
-         help
-         help-placement="top"
-         help-text="{{ node.name }}">
+         tooltip-placement="top"
+         tooltip="{{ node.name }}">
         {{ node.name }}
       </a>
 
@@ -28,27 +27,24 @@
     <!-- running -->
     <span ng-if="!node.endTime"
           class="tree-node-addon activity-instance-running"
-          help
-          help-text="Running Activity Instance"
-          help-placement="'right'">
+          tooltip="Running Activity Instance"
+          tooltip-placement="right">
       <i class="icon-adjust"></i>
     </span>
 
     <!-- completed -->
     <span ng-if="node.endTime && !node.canceled"
           class="tree-node-addon activity-instance-completed"
-          help
-          help-text="Completed Activity Instance"
-          help-placement="'right'">
+          tooltip="Completed Activity Instance"
+          tooltip-placement="right">
       <i class="icon-ok-circle"></i>
     </span>
 
     <!-- canceled -->
     <span ng-if="node.endTime && node.canceled"
           class="tree-node-addon activity-instance-canceled"
-          help
-          help-text="Canceled Activity Instance"
-          help-placement="'right'">
+          tooltip="Canceled Activity Instance"
+          tooltip-placement="right">
       <i class="icon-ban-circle"></i>
     </span>
 
