--- a/client/index.html
+++ b/client/index.html
@@ -42,7 +42,7 @@
             camunda Admin
           </a>
 
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
