--- a/client/webapp/src/main/webapp/app/cockpit/index.html
+++ b/client/webapp/src/main/webapp/app/cockpit/index.html
@@ -52,7 +52,7 @@
             camunda Cockpit
           </a>
 
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
