--- a/client/webapp/src/main/webapp/app/tasklist/index.html
+++ b/client/webapp/src/main/webapp/app/tasklist/index.html
@@ -50,7 +50,7 @@
             camunda Tasklist
           </a>
 
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
