--- a/client/client/scripts/process/start.html
+++ b/client/client/scripts/process/start.html
@@ -151,7 +151,7 @@
       <button class="btn btn-primary"
               type="submit"
               ng-disabled="$invalid"
-              ng-click="startProcess()">Fly rocket, fly!</button>
+              ng-click="startProcess()">Start</button>
     </div>
   </div>
 </form>
