feat(header): add user account link

--- a/client/client/scripts/navigation/navigation.html
+++ b/client/client/scripts/navigation/navigation.html
@@ -22,6 +22,14 @@
 
             <li>
               <a tooltip-placement="bottom"
+                 tooltip="Manage your account"
+                 href="/camunda/app/admin/default/#/users/jonny1?tab=profile">
+                {{ user.id }}
+              </a>
+            </li>
+
+            <li>
+              <a tooltip-placement="bottom"
                  tooltip="Start a process"
                  href="#/processes">
                 <i class="glyphicon glyphicon-list-alt"></i>
