feat(splashscreen): move the splashscreen to the login

--- a/client/client/scripts/index.html
+++ b/client/client/scripts/index.html
@@ -8,21 +8,6 @@
     <!-- / page-navigation -->
 
 
-<!--     <div class="splash-screen">
-      <div class="panel panel-info">
-        <div class="panel-heading">
-          <h3 class="panel-title">Upcoming camunda Tasklist</h3>
-        </div>
-        <div class="panel-body">
-          <p>
-            This is the draft of <a target="_blank" href="https://github.com/camunda/camunda-tasklist-ui">upcoming re-designed tasklist</a> for the <a target="_blank" href="https://github.com/camunda/camunda-tasklist-ui">camunda BPM platform</a>.<br/>
-            For now, you can start a process (by clicking on the <i class="glyphicon glyphicon-list-alt"></i> icon in the header).<br/>
-          </p>
-        </div>
-      </div>
-    </div>
- -->
-
     <div class="container-fluid">
       <div class="row controls">
         <div class="cols col-sm-2 task-piles">
@@ -86,22 +71,7 @@
         </div>
 
         <div class="cols col-sm-4 task-list">
-          <!-- <div cam-tasklist-pile-tasks></div> -->
-          <div class="inner">
-
-            <div class="panel panel-default splash-screen">
-              <div class="panel-heading">
-                <h3 class="panel-title">Upcoming camunda Tasklist</h3>
-              </div>
-              <div class="panel-body">
-                <p>
-                  This is the draft of <a target="_blank" href="https://github.com/camunda/camunda-tasklist-ui">upcoming re-designed tasklist</a> for the <a target="_blank" href="https://github.com/camunda/camunda-tasklist-ui">camunda BPM platform</a>.<br/>
-                  For now, you can start a process (by clicking on the <i class="glyphicon glyphicon-list-alt"></i> icon in the header).<br/>
-                </p>
-              </div>
-            </div>
-
-          </div>
+          <div cam-tasklist-pile-tasks></div>
         </div>
 
         <div class="cols col-sm-6 current-task">
