chore(SDK): integrate JS SDK

--- a/client/client/scripts/pile/form.html
+++ b/client/client/scripts/pile/form.html
@@ -1,4 +1,7 @@
-<form class="form-horizontal" role="form" name="newPile">
+<form class="form-horizontal"
+      role="form"
+      name="newPile"
+      ng-controller="pileNewCtrl">
   <div class="row">
     <div class="col-xs-8">
       <div class="form-group">
