chore(pile): load tasks from pile filters

--- a/client/client/scripts/pile/list.html
+++ b/client/client/scripts/pile/list.html
@@ -1,6 +1,8 @@
 <div ng-controller="pilesCtrl">
-  <div ng-if="!piles.length">Loading...</div>
-  <div ng-if="piles.length"
+  <div ng-show="loading"
+       class="loader">Loading...</div>
+
+  <div ng-hide="loading"
        ng-repeat="pile in piles"
        cam-tasklist-pile></div>
 </div>
