refactor(data): remove the "data" modules

--- a/client/client/index.html
+++ b/client/client/index.html
@@ -65,7 +65,7 @@
       }
     };
   </script>
-  <script type="text/javascript" src="scripts/deps-n-mocks.js" data-main="scripts/camunda-tasklist-ui"></script>
+  <script type="text/javascript" src="scripts/deps.js" data-main="scripts/camunda-tasklist-ui"></script>
   <script type="text/javascript">
   document.write('<s'+'cript src="//'+ location.hostname +':'+ (parseInt(location.port, 10)+1) +'/livereload.js?snipver=1"><'+'/script>')
   </script>
